# segmentation_msgs

./: CMakeLists.txt  package.xml
msg/: InstanceSemanticMap.msg  SemanticInstance2D.msg  SemanticPointCloud.msg
srv/: SegmentImage.srv
